# lab3

./: .gitignore  PROJECT_STRUCTURE.md  build_lab3_variant23_notebook.py  build_notebook.py  lab3.ipynb  lab3.md  lab3_variant23.ipynb  report.md  requirements.txt  research.ipynb  run_all.ipynb
lab3/: Report.md  Research.ipynb  analysis.py  config.py  filters.py  pyproject.toml  sell.csv  sell.py  task4_city_day.py
lab3/report_assets/: air_sensor_correlations.csv  air_sensor_filter_metrics.csv  air_sensor_summary.csv  sell_correlations.csv  sell_filter_metrics.csv  sell_series_summary.csv  sell_variant_34.csv
lab3/src/: DataProcessing.py  Filters.py  TimeSeriesAnalysis.py  ToolsResearch.py
lab3_solution/: lab3_solution-2.ipynb  sell.csv
notebooks/: lab3_hard_wavelet_sensors.ipynb  lab3_timeseries.ipynb
out_variant23/: hard_dual_sensor.csv  variant23_filter_metrics.csv  variant23_series.csv
src/: __init__.py  analysis.py  correlations.py  data_loader.py  eda.py  filters.py  hard_data_loader.py  metrics.py  periodicity.py  task4_sensors.py  utils.py  wavelet_lms.py
src/filters/: __init__.py  kalman.py  moving_average.py  savitzky_golay.py  wavelet.py
